(bug fix) tags spilling out

--- a/Core/static/Core/style.css
+++ b/Core/static/Core/style.css
@@ -290,8 +290,9 @@ footer {
                     display: flex;
                     flex-direction: row;
                     list-style-type: none;
-                    width: 50%;
+                    width: 80%;
                     height: 100%;
+                    overflow-x: auto;
                 }
 
                     .collabInfoBarWrapper ul li {
